uncompleted first week

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,12 +14,38 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
     <!--Add a nav bar here -->
-
+        <!-- <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="/djangoapp">Main</a>
+            <a class="navbar-brand" href="/djangoapp/about">About Us</a>
+            <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
+        </nav> -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">DealerShip</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" href="/djangoapp">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/djangoapp/about">About Us</a>
+                <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
+                <!-- <a class="nav-link disabled">Disabled</a> -->
+              </div>
+            </div>
+        </nav>
     <!--Add a dealer table here -->
-
+        <!-- <footer class="page-footer font-small blue">
+            <div class="footer-copyright text-center py-3">
+                <a href="/djangoapp/contact"> Contact Us</a>
+            </div>
+        </footer> -->
+        <footer class="footer">
+            <div class="container">
+                
+                <p><a href="/djangoapp/contact"> Contact Us</a></p>
+            </div>
+        </footer>
     </body>
 
 </html>
