--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -37,11 +37,6 @@
 
 <body>
     <!--Add a nav bar here -->
-    <!-- <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="/djangoapp">Main</a>
-            <a class="navbar-brand" href="/djangoapp/about">About Us</a>
-            <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
-        </nav> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">DealerShip</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -53,10 +48,32 @@
                 <a class="nav-link active" href="/djangoapp">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="/djangoapp/about">About Us</a>
                 <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
-                <!-- <a class="nav-link disabled">Disabled</a> -->
             </div>
         </div>
+            
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username">
+                            <input type="password" class="form-control" placeholder="Password" name="psw">
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
+
     <!--Add a dealer table here -->
     <div class="content container">
         <h1>Dealership Review Page</h1>
