--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -2,10 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% load static %}
+    <title>Registration Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+    <script
+        src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <style>
+        /* Set the wrapper to be a flex container */
+        .wrapper {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            /* Ensure wrapper takes up the full viewport height */
+        }
+
+        /* Set the main content area to grow and push the footer to the bottom */
+        .content {
+            flex-grow: 1;
+        }
+
+        /* Style the sticky footer */
+        .footer {
+            background-color: #f5f5f5;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">DealerShip</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" href="/djangoapp">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/djangoapp/about">About Us</a>
+                    <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
+                </div>
+            </div>
+                <ul class="nav navbar-nav navbar-right">
+                
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username">
+                                <input type="password" class="form-control" placeholder="Password" name="psw">
+                                <button class="btn btn-primary" type="submit">Login</button>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     <!--Add a registration form here -->
+    <form action="{% url 'djangoapp:registration' %}" method="post">
+        <div class="container">
+          <h1>Sign Up</h1>
+          <hr>
+          <label for="username"><b>User Name</b></label>
+          <input type="text" placeholder="Enter User Name: " name="username" required>
+          <br>
+          <label for="firstname"><b>First Name</b></label>
+          <input type="text" placeholder="Enter First Name: " name="firstname" required>
+          <br>
+          <label for="lastname"><b>Last Name</b></label>
+          <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+          <br>
+          <label for="psw"><b>Password</b></label>
+          <input type="password" placeholder="Enter Password: " name="psw" required>
+          <div>
+              {% csrf_token %}
+              <button class="btn btn-primary button" type="submit">Sign Up</button>
+          </div>
+        </div>
+      </form>
     </body>
 </html>
